# SQL-Dojo-DBT-Edition

./: README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
nytaxi/: .gitignore
nytaxi/analyses/: q10_airport_traffic.sql  q11_speed_metric.sql  q12_long_vs_short_haul.sql  q1_volume_trends.sql  q2_revenue_analysis.sql  q3_passenger_behaviour.sql  q4_trip_efficiency.sql  q5_payment_preferences.sql  q6_tipping_culture.sql  q7_location_popularity.sql  q8_rate_code_impact.sql  q9_congestion_fees.sql
nytaxi/models/core/: dim_zones.sql
nytaxi/models/marts/: dm_monthly_revenue.sql  fact_trips.sql
nytaxi/models/marts/analytics/: analytics_airport_traffic.sql  analytics_congestion_fees.sql  analytics_location_popularity.sql  analytics_long_short_haul.sql  analytics_passenger_behavior.sql  analytics_payment_prefs.sql  analytics_rate_code_impact.sql  analytics_revenue_trends.sql  analytics_speed_metrics.sql  analytics_tipping_culture.sql  analytics_trip_efficiency.sql  analytics_volume_trends.sql
nytaxi/models/staging/: sources.yml  stg_taxi_zone_lookup.sql  stg_yellow_tripdata.sql
