[project]
name = "sql-dojo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-bigquery>=1.10.3",
    "dbt-core>=1.10.15",
]

[project.scripts]

[dependency-groups]
dev = [
    "poethepoet>=0.38.0",
]

[tool.poe.tasks]
compile = "dbt compile"
run = "dbt run"
seed = "dbt seed"